SOC-1621 | fix: reduce gap on mobile post details between images and text

--- a/front/main/app/styles/component/discussion/_discussion-post-images.scss
+++ b/front/main/app/styles/component/discussion/_discussion-post-images.scss
@@ -1,13 +1,11 @@
-$desktop-lightbox-close-size: 24px;
-
 .post-images {
 	margin-bottom: 13px;
 
 	.post-image {
-		display: block;
-		margin-top: 9px;
+		margin-top: 5px;
 
 		@media #{$desktop-range} {
+			margin-top: 9px;
 			margin-bottom: 18px;
 		}
 	}
